# jellyfin-todoist-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  database.py  docker-compose.yml  handlers.py  main.py  models.py  pyproject.toml  test_reorder.py  test_webhook.py  todoist.py  todoist_helpers.py  utils.py
